# recipes

./: .travis.yml  README.md  meson.build
data/: application.css  com.github.bartzaalberg.recipes.appdata.xml  com.github.bartzaalberg.recipes.appdata.xml.in  com.github.bartzaalberg.recipes.desktop  com.github.bartzaalberg.recipes.desktop.in  com.github.bartzaalberg.recipes.gschema.xml  com.github.bartzaalberg.recipes.pkexec.policy  recipes.json
data/icons/: icons.gresource.xml
debian/: changelog  control  copyright
po/: POTFILES  com.github.bartzaalberg.recipes.pot  fr.po  nl.po  tr.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  nl.po  tr.po
recipes/: new-recipes.json  recipes.json
recipes/banana_bread/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/broccoli_beer_cheese_soup/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/bruschetta_with_tomato/: recipe.md  recipe.md~  recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/chocolate_waffle_cones/: recipe_en.md
recipes/crockpot_buffalo_chicken/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/downtown_marinade/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/figs_with_goat_cheese/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/green_chile_stew/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/green_chili_stew/: recipe_en.md
recipes/healthy_whipped_cream/: recipe.json  recipe_en.md
recipes/mongolian_beef/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/new_york_strip/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/nilla_wafer_french_toast/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/one_minute_muffin/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/pork_steaks/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/ravioli_lasagna/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/ravioli_lasagne/: recipe_en.md  recipe_nl.md
recipes/red_berry_tart/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/roasted_brussels_sprouts/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/roasted_okra/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/smashed_carrots/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/stuffed_peppers/: recipe_en.md  recipe_fr.md  recipe_nl.md
recipes/sushi/: recipe_en.md
recipes/your_own_recipe/: recipe_en.md  recipe_fr.md  recipe_nl.md
src/: Application.vala  CommandHandler.vala  Constants.vala  FileManager.vala  FileManager.vala~  IconHandler.vala  InstalledPackageRow.vala  ListBox.vala  ListBoxRow.vala  ListBoxRow.vala~  MainWindow.vala  PhotoCard.vala  PhotosFlowBox.vala  Recipe.vala  RecipeFileManager.vala  StackManager.vala  WebView.vala
src/Components/: DetailViewBanner.vala  HeaderBar.vala
src/Services/: FileHandler.vala  IconHandler.vala  PDFExporter.vala
src/Views/: DetailView.vala  ListView.vala  ProgressView.vala  WebView.vala  WelcomeView.vala
